--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,14 @@
 :root {
-  --background: #ffffff;
+  --background: #f3f7fc;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
